# sdf

./: CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  demo.cpp  pybind.cpp  setup.py  setup_cmake.py
include/sdf/: RTree.h  sdf.hpp
include/sdf/internal/: nanoflann.hpp  sdf_util.hpp
src/: renderer.cpp  sdf.cpp  util.cpp
src/cmake/: sdfConfig.cmake
tools/: pybench.py
